# esmini-wrapper

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
esmini_wrapper/: __init__.py  esmini.py  server.py
misc/Catalogs/Pedestrians/: PedestrianCatalog.xosc
misc/Catalogs/Vehicles/: VehicleCatalog.xosc
tests/: test_smoke.py
