[project]
name = "esmini-wrapper"
version = "0.1.0"
description = "An esmini wrapper for SBSVS"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "pisa-api>=0.1.20"
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv.sources]
pisa-api = { git = "https://github.com/pisa-hut/pisa-api.git" }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
